assets/css/editor.css.styl
//rupture.scale = 0 500px 800px 1400px
// Meme editor styles

*
  box-sizing border-box

$base-letter-spacing = 0.05em
$canvas-size = 423px
$canvas-border = 5px

html, body
  border 0
  margin 0
  padding 0
  font-family 'knockout46_flyweight', Impact, sans-serif
  letter-spacing $base-letter-spacing

#share-popup-src
  display none


#editor-type-images
  height 100%

#bottom
  display block

#beats-logo
  display block

.hidden
  display none

.editor
  position absolute
  width 100%
  z-index 10
  overflow hidden

  display flex
  flex-direction column
  justify-content center

  .button
    cursor pointer
    display inline-block
    //background url(/img/button-bg.jpg) 100% 100%
    //width (320/2)px
    //height (115/2)px
    font-size 24px
    letter-spacing 0.05em
    line-height 0
    //padding-top (@height/2)
    text-align center
    //border-radius 4px
    //color white
    text-transform uppercase
    &:hover
      opacity 0.9
    &:active
      opacity 0.5

  $m-canvas-scale = 0.25
  .canvas-outer
    width ($canvas-size + $canvas-border*2)
    height @width
    padding $canvas-border
    margin 0 auto
    @media (max-width: 500px)
      width ($canvas-size*$m-canvas-scale*2 + $canvas-border*2)
      height @width

    .canvas-container
      transform scale(0.5, 0.5)
      transform-origin top left
      @media (max-width: 500px)
        transform-origin top left
        transform scale($m-canvas-scale, $m-canvas-scale)

  .editor-controls
    //display none
    opacity 0
    text-align center
    margin 20px auto
    padding 0 10px
    transition .5s
    transition-delay 1s

    .editor-image-controls
      display none

    .editor-range-control
    .editor-invert-control
      display block
      margin 0 auto
      height 40px
      max-width $canvas-size
      @media (max-width: 500px)
        max-width 90%
        height 25px

    .editor-range-control
      padding-top 18px

    .editor-invert-control
      margin 0 auto
      display inline-block
      border 2px solid white
      padding 10px
      input[type=radio]
        display none
      label
        margin 0 10px
      @media (max-width: 500px)
        padding 4px
        label
          font-size 14px

    label, input[type=radio]
      display inline

    input[type=file]
      display none

    label
      font-size 20px
      letter-spacing 2px
      color white
      text-transform uppercase
      cursor pointer

    input:checked + label
      color red

  .editor-types
    margin 5px 0 25px 0
    //margin 20px 0

    //custom radio buttons
    input[type=radio]
      display none

    label
      display inline-block
      margin-left 25px
      vertical-align middle
      &:first-of-type
        margin-left 0
      @media (max-width: 500px)
        margin-left 10px
        font-size 14px

    input[type=radio] + label:before
      display inline-block
      content ''
      vertical-align middle
      height 26px
      width 26px
      margin-right 8px
      background-size 100px 26px
      background-repeat no-repeat
      background-position left center
      @media (max-width: 500px)
        height 13px
        width 13px
        background-size 50px 13px
    input[type=radio]:checked + label:before
      background-position -50px 0
      @media (max-width: 500px)
        background-position -25px 0

    #control-photo + label:before
      background-image url(/img/editor/control-icon-image-2x.png)
    #control-logo + label:before
    #control-invert + label:before
      background-image url(/img/editor/control-icon-logo-2x.png)
    #control-contrast + label:before
      background-image url(/img/editor/control-icon-contrast-2x.png)


// Change UI depending on state
.editor

  //&.mode-intro

  &.mode-text
    .editor-controls
      opacity 1
      //display block

  &.mode-photo
    .editor-controls
      opacity 1
      //display block
    .editor-image-controls
      display block
    .canvas-outer
      background white

  &.mode-done
    .editor-controls
      opacity 1
      //display block
    .button.upload
      display none
    .editor-image-controls
      display none

  // toggle invert control
  .editor-controls
    .editor-invert-control
      display none
    &.invert
      .editor-invert-control
        display inline-block
      .editor-range-control
        display none

// Popup
.share-popup
  display none
  text-align center
  background-image url(/img/bg-white.jpg)
  background-size cover
  padding 128px 0
  //&:not(.ready) .button
  //  cursor wait
  //  opacity 0.25
  //  pointer-events none
  .button
    margin 0 10px
    @media (max-width: 500px)
      display block
      margin 10px 0

.featherlight-share
  .share-popup
    display block !important
  .featherlight-content
    width 800px
    max-width 90%

// Intro

#top
  position relative
  //background #eee
  //display none
  width 100%

  #slides
    position absolute
    width 100%
    height 100%

  .slide
    width 100%
    height 100%
    position absolute
    top 0
    left 0
    background-color #000
    background-repeat no-repeat
    background-position top center
    background-attachment fixed
    -webkit-background-size cover
    -moz-background-size cover
    -o-background-size cover
    background-size cover

  .slide1
    background-image url(/img/intro/intro-bg1.jpg)
    z-index 6
  .slide2
    background-image url(/img/intro/intro-bg2.jpg)
    z-index 5
  .slide3
    background-image url(/img/intro/intro-bg3.jpg)
    z-index 4
  .slide4
    background-image url(/img/intro/intro-bg4.jpg)
    z-index 3
  .slide5
    background-image url(/img/intro/intro-bg5.jpg)
    z-index 2


// Try to position fake textbox on screen so iOS doesn't scroll away
textarea.fabric-hidden-input
  position absolute
  bottom 35% !important
  left 50% !important
  color rgba(0,0,0,0)
  opacity 0.0
  // filter alpha(opacity=00)

